# btc-rpc-proxy

./: Cargo.toml  Dockerfile  Dockerfile.custom  btc_rpc_proxy.toml  compose.yml  config_spec.toml  docker-compose.yml  entrypoint.sh
.github/: dependabot.yml  readme.md  renovate.json
.github/workflows/: build.yml  ghcr.yml
custom/: Cargo.toml
src/: client.rs  create_state.rs  fetch_blocks.rs  lib.rs  proxy.rs  rpc_methods.rs  users.rs
